# nanoagent

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nanoagent/: __init__.py  cli.py  loop.py  render.py  tools.py  types.py
tests/: test_loop.py  test_tools.py
